--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,11 @@
 	    <artifactId>apache-log4j-extras</artifactId>
 		<version>1.2.17</version>
 	</dependency>
+	<dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>jstl</artifactId>
+        <version>1.2</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
